[PEPPER-1390] Improve handling of missing ES participant document (#2846)
* Improve handling of missing ES participant document

* Convert more usage to ElasticSearchService.getParticipantDocumentById

* Rewrite RgpParticipantDataService.insertFamilyId to properly handle missing participant document

* Do not handle ptps with legacy PIDs in ParticipantInitService

* Fixed logging message

* Added sequence number logging to processInstitutionRequest

* Fix method names

* Handle legacy PID in ElasticSearchService.getParticipantDocument... just in case